<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/color_backroud"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_inhoadon_hoadon"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical"
        android:layout_weight="4"
        android:orientation="vertical"
        android:background="@color/color_backroud">

        <TextView
            android:id="@+id/madonhang_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_madonhang_hoadon"
            android:textColor="@color/txt_black" />

        <TextView
            android:id="@+id/tensanpham_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_tensanpham_hoadon"
            android:textColor="@color/txt_black" />

        <TextView
            android:id="@+id/mau_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_mau_hoadon"
            android:textColor="@color/txt_black" />
        <TextView
            android:id="@+id/size_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_size_hoadon"
            android:textColor="@color/txt_black" />

        <TextView
            android:id="@+id/tenkhachhang_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_tenkhachhang_hoadon"
            android:textColor="@color/txt_black" />

        <TextView
            android:id="@+id/sdtkhachhang_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_sodienthoaikhachhang_hoadon"
            android:textColor="@color/txt_black" />
        <TextView
            android:id="@+id/diachi_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_diachi_hoadon"
            android:textColor="@color/txt_black" />
        <TextView
            android:id="@+id/tongtien_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_tongtien_hoadon"
            android:textColor="@color/txt_black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/color_backroud">

        <Button
            android:id="@+id/btn_giao_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/vienbutton"
            android:text="@string/btn_giao_hoadon"
            android:textColor="@color/txt_black" />
        <Button
            android:id="@+id/btn_thoat_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/vienbutton"
            android:text="@string/btn_thoat_hoadon"
            android:textColor="@color/txt_black" />
        <Button
            android:id="@+id/btn_huy_hoadon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/vienbutton"
            android:text="@string/btn_huy_hoadon"
            android:textColor="@color/txt_black" />

    </LinearLayout>

</LinearLayout>