<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/color_backroud"
android:gravity="center"
android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_madonhang_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_Madonhang_dsvanchuyen"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_tensanpham_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tensanpham__dsvanchuyen"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_soluong_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_soluong_dsvanchuyen"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_size_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_size_dsvanchuyen"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_mau_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_mau_dsvanchuyen"
                android:textColor="@color/txt_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_tinhtrang_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tinhtrang_dsvanchuyen"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_tenkhachhang_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tenkhachhang_dsvanchuyen"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_sodienthoai_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_sodienthoai_dsvanchuyen"
                android:textColor="@color/txt_black" />
            <TextView
                android:id="@+id/txt_diachikhachhang_vanchuyennv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_diachikhachhang_dsvanchuyen"
                android:textColor="@color/txt_black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_xacnhan_dsvanchuyen"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/vienbutton"
            android:text="@string/btn_xacnhan_dsvanchuyen"
            android:textColor="@color/txt_black" />
        <Button
            android:id="@+id/btn_Huy_dsvanchuyen_lsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/vienbutton"
            android:text="@string/btn_huy_dsvanchuyen"
            android:textColor="@color/txt_black" />


    </LinearLayout>

</LinearLayout>