<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/color_backroud"
android:gravity="center"
android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/masanpham_dsdagiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_Madonhang_dsdonhangdagiao"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/tensanpham_dsdagiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tensanpham_dsdonhangdagiao"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/soluong_dsdagiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_soluong_dsdonhangdagiao"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/tenkhachhang_dsdagiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tenkhachhang_dsdonhangdagiao"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/sodienthoaikhachhang_dsdagiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_sodienthoaikhachhang_dsdonhangdagiao"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/diachi_dsdagiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_diachi_dsdonhangdagiao"
                android:textColor="@color/txt_black" />
            <TextView
                android:id="@+id/tongtien_dsdagiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/btn_tongtien_dsdonhangdagiao"
                android:textColor="@color/txt_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tinhtrang_dsdagiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/btn_tinhtrang_dsdonhangdagiao"
                android:textColor="@color/txt_black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_xacnhan_dsdagiao_lsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/vienbutton"
            android:text="@string/btn_xacnhan_dsdonhangdagiao"
            android:textColor="@color/txt_black" />

        <Button
            android:id="@+id/btn_Huy_dsdagiao_lsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/vienbutton"
            android:text="@string/btn_huy_dsdonhangdagiao"
            android:textColor="@color/txt_black" />


    </LinearLayout>

</LinearLayout>