<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/color_backroud"
android:gravity="center"
android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_madonhang_dsdonhanghoanthanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_madonhang_dsdonhanghoanthanhqly"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_tensanpham_dsdonhanghoanthanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tensanpham_dsdonhanghoanthanhqly"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_tenkhachhang_dsdonhanghoanthanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tenkhachhang_dsdonhanghoanthanhqly"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_sodienthoaikhachhang_dsdonhanghoanthanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_sodienthoaikhachhang_dsdonhanghoanthanhqly"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_diachikhachhang_dsdonhanghoanthanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_diachikhachhang_dsdonhanghoanthanhqly"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_nguoigiao_dsdonhanghoanthanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_nguoigiao_dsdonhanghoanthanhqly"
                android:textColor="@color/txt_black" />
            <TextView
                android:id="@+id/txt_sodienthoainguoigiao_dsdonhanghoanthanh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/txt_sodienthoainguoigiao_dsdonhanghoanthanhqly"
            android:textColor="@color/txt_black" />
            <TextView
                android:id="@+id/txt_tongtien_dsdonhanghoanthanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tongtien_dsdonhanghoanthanhqly"
                android:textColor="@color/txt_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_tinhtrang_dsdonhanghoanthanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tinhtrang_dsdonhanghoanthanhqly"
                android:textColor="@color/txt_black" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>