<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/color_backroud"
android:gravity="center"
android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_hoten_dsnguoigiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_hoten_danhsachnguoigiao"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_sodienthoai_dsnguoigiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_sodienthoai_danhsachnguoigiao"
                android:textColor="@color/txt_black" />

            <TextView
                android:id="@+id/txt_tinhtrang_dsnguoigiao_lsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/txt_tinhtrang_danhsachnguoigiao"
                android:textColor="@color/txt_black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_giao_dsnguoigiao_lsv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:background="@drawable/vienbutton"
                    android:text="@string/btn_giao_danhsachnguoigiao"
                    android:textColor="@color/txt_black" />

                <Button
                    android:id="@+id/btn_Huy_dsnguoigiao_lsv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:background="@drawable/vienbutton"
                    android:text="@string/btn_huy_danhsachnguoigiao"
                    android:textColor="@color/txt_black" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>